--- a/index.html
+++ b/index.html
@@ -31,31 +31,46 @@
       </div>
     </header>
 
-    <section class="features">
-      <h3>Why Travellan?</h3>
-      <div class="features-box">
-        <div class="row">
-          <div class="col span-1-of-4 box title"> <ion-icon name="airplane-outline"></ion-icon>Transport</div>
-          <div class="col span-1-of-4 box title"><ion-icon name="location-outline"></ion-icon>Map markers</div>
-          <div class="col span-1-of-4 box title"><ion-icon name="ticket-outline"></ion-icon>Tickets</div>
-          <div class="col span-1-of-4 box title"><ion-icon name="umbrella-outline"></ion-icon>Weather</div>
-        </div>
-        <div class="row">
-          <div class="col span-1-of-4 box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales ultrices nulla et gravida. Proin non erat imperdiet, consectetur magna eget, consectetur nibh. Duis at efficitur lorem. Proin vehicula sapien id ornare interdum. Donec libero nibh, pretium ut ligula eget, faucibus malesuada augue. Pellentesque vel ante eu nunc commodo pulvinar. </div>
-          <div class="col span-1-of-4 box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales ultrices nulla et gravida. Proin non erat imperdiet, consectetur magna eget, consectetur nibh. Duis at efficitur lorem. Proin vehicula sapien id ornare interdum. Donec libero nibh, pretium ut ligula eget, faucibus malesuada augue. Pellentesque vel ante eu nunc commodo pulvinar. </div>
-          <div class="col span-1-of-4 box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales ultrices nulla et gravida. Proin non erat imperdiet, consectetur magna eget, consectetur nibh. Duis at efficitur lorem. Proin vehicula sapien id ornare interdum. Donec libero nibh, pretium ut ligula eget, faucibus malesuada augue. Pellentesque vel ante eu nunc commodo pulvinar. </div>
-          <div class="col span-1-of-4 box">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sodales ultrices nulla et gravida. Proin non erat imperdiet, consectetur magna eget, consectetur nibh. Duis at efficitur lorem. Proin vehicula sapien id ornare interdum. Donec libero nibh, pretium ut ligula eget, faucibus malesuada augue. Pellentesque vel ante eu nunc commodo pulvinar. </div>
-        </div>
-      </div>
-    </section>
-    <section class="photos">
+    <section class="section-features">
       <div class="row">
-        <div class="col span-1-of-4 photo"></div>
-        <div class="col span-1-of-4 photo"></div>
-        <div class="col span-1-of-4 photo"></div>
-        <div class="col span-1-of-4 photo"></div>
+          <div class="col span-1-of-4">
+              <div class="feature-box">
+                  <ion-icon name="airplane-outline"></ion-icon>
+                  <h3 class="heading-tertiary u-margin-bottom-small">Feature 1</h3>
+                  <p class="feature-box__text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe eos in quis, provident praesentium assumenda fuga dolores.
+                  </p>
+              </div>
+          </div>
+          <div class="col span-1-of-4">
+              <div class="feature-box">
+                  <ion-icon name="location-outline"></ion-icon>
+                  <h3 class="heading-tertiary u-margin-bottom-small">Feature 2</h3>
+                  <p class="feature-box__text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe eos in quis, provident praesentium assumenda fuga dolores.
+                  </p>
+              </div>
+          </div>
+          <div class="col span-1-of-4">
+              <div class="feature-box">
+                  <ion-icon name="ticket-outline"></ion-icon>
+                  <h3 class="heading-tertiary u-margin-bottom-small">Feature 3</h3>
+                  <p class="feature-box__text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe eos in quis, provident praesentium assumenda fuga dolores.
+                  </p>
+              </div>
+          </div>
+          <div class="col span-1-of-4">
+              <div class="feature-box">
+                  <ion-icon name="umbrella-outline"></ion-icon>
+                  <h3 class="heading-tertiary u-margin-bottom-small">Feature 4</h3>
+                  <p class="feature-box__text">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe eos in quis, provident praesentium assumenda fuga dolores.
+                  </p>
+              </div>
+          </div>
       </div>
-    </section>
+  </section>
     
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
   </body>
